--- a/public/index.html
+++ b/public/index.html
@@ -21,8 +21,8 @@
         <figure class="header-logotipo">
             <img src="imagenes/logo.png" alt="Blog Logotipo">
         </figure>
-        <h2 class="titulo">VideoBlog Geek</h2>
-        <h3 class="titulo-a">Encuentra los Videos mas poderosos de los geeks</h2>
+        <h2 class="titulo">Plan Cobertura Dental</h2>
+        <h3 class="titulo-a">Panel de Administración</h2>
             <a id="btnInicioSesion" class="modal-trigger waves-effect waves-light btn btnPpal">Iniciar Sesión</a>
             <figure class="header-avatar">
                 <img id="avatar" src="imagenes/usuario.png" alt="Avatar">
@@ -30,14 +30,59 @@
     </header>
     <nav class="menu">
         <ul>
+            <li><a id="btnClinicas">CLÍNICAS</a>
+                <ul>
+                    <li><a id="btnAltaClinica">Dar de alta</a></li>
+                    <li><a>Consultar clínicas</a>
+                        <ul>
+                            <li><a id="btnTodasClinicas">Ver todas</a></li>
+                            <li><a id="btnNameClinicas">Por nombre</a></li>
+                            <li><a>Por categoría</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="">Consultar pacientes</a></li>
+                    <li><a href="">Tickets</a></li>
+                    <li><a href="">Saldos de pacientes</a></li>
+                    <li><a href="">Facturas</a></li>
+                </ul>
+            </li>
+            <li><a id="btnPacientes">PACIENTES</a>
+                <ul>
+                    <li><a href="">Dar de alta</a></li>
+                    <li><a href="">Consultar pacientes</a></li>
+                    <li><a href="">Tickets del paciente</a></li>
+                    <li><a href="">Puntos del pacientes</a></li>
+                    <li><a href="">Saldo del paciente</a></li>
+                </ul>
+            </li>
+            <li><a id="btnConsultores">CONSULTORES</a>
+                <ul>
+                    <li><a href="">Dar de alta</a></li>
+                    <li><a href="">Consultar consultores</a></li>
+                    <li><a href="">Pacientes del consultor</a></li>
+                    <li><a href="">Tickets de venta</a></li>
+                    <li><a href="">Saldo del paciente</a></li>
+                    <li><a href="">Facturas</a></li>
+                </ul>
+            </li>
+            <li><a id="btnProveedores">PROVEEDORES</a></li>
+            <li><a id="btnUsuarios">USUARIOS</a>
+                <ul>
+                    <li><a href="">Dar de alta</a></li>
+                    <li><a href="">Tipología</a></li>
+                    <li><a href="">Permisos</a></li>
+                </ul>
+            </li>
+            <!--
             <li><a id="btnTodoPost">Todos los Posts</a></li>
             <li><a id="btnMisPost">Mis Posts</a></li>
             <li><a id="btnModalPost">Realiza un Post</a></li>
             <li><a href="index.html#footer">Contactenos</a></li>
+            -->
         </ul>
     </nav>
-    <h4 id="tituloPost" class="titulo-posts">Posts de la Comunidad</h4>
-    <section class="posts" id="posts">        
+    <h4 id="tituloPost" class="titulo-posts">Todas las Clínicas</h4>
+    <section class="posts" id="clinicas">        
     </section>
     <footer class="footer" id="footer">
 
@@ -48,49 +93,11 @@
 
             <div class="redesSociales">
                 <!-- Esto es el footer -->
-                <p class="realizadopor"><strong>Developed by Juan G.</strong></p>
+                <p class="realizadopor"><strong>Developed by Alberto Del Viejo</strong></p>
                 <p class="realizadoclase"><strong>GDE Firebase</strong></p>
-                <div class="logos-redes">
-                    <a class="logo-facebook" target="_blank" href="https://www.facebook.com/jggomez84"></a>
-                    <a class="logo-twitter" target="_blank" href="https://twitter.com/jggomezt"></a>
-                    <a class="logo-github" target="_blank" href="https://github.com/jggomez"></a>
-                </div>
             </div>
 
-            <div class="formulario-contactenos">
-                <div class="form-col1">
-                    <div class="input-field">
-                        <input id="nombreContacto" type="text" required />
-                        <label for="nombreContacto">Nombres:</label>
-                    </div>
-                    <div class="input-field">
-                        <input id="emailContacto" type="email" required />
-                        <label for="emailContacto">E-mail</label>
-                    </div>
-                    <div class="tipos-comentarios">
-                        <input id="comentarioTipo" type="checkbox" name="Comentarios" value="comentarios" checked />
-                        <label for="comentarioTipo">
-                            Comentarios
-                        </label>
-                        <input id="reclamoTipo" type="checkbox" name="reclamos" value="Reclamos" />
-                        <label for="reclamoTipo"> Reclamos
-                        </label>
-                        <input id="mejoraTipo" type="checkbox" name="Mejora" value="mejora" />
-                        <label for="mejoraTipo">
-                            Mejora
-                        </label>
-                        <input id="otroTipo" type="checkbox" name="Otro" value="otro" />
-                        <label for="otroTipo">
-                            Otro
-                        </label>
-                    </div>
-                </div>
-                <div class="form-col2">
-                    <label for="comentariosContacto">Comentarios:</label>
-                    <textarea id="comentariosContacto" placeholder="Escribe tu comentario" cols="30" rows="6" required></textarea>
-                    <input type="submit" class="waves-effect waves-light btn btnPpal" value="Enviar" />
-                </div>
-            </div>
+            
         </div>
     </footer>
 
@@ -172,13 +179,14 @@
         </div>
     </div>
 
-    <!-- Modal Post -->
-    <div id="modalPost" class="modal modal-registro">
+    <!-- Modal AltaClinica -->
+    <div id="modalAltaClinica" class="modal modal-registro">
         <div class="modal-content">
             <div class="container">
                 <div class="row">
                     <div class="col s12 m6 registro-bienvenida">
-                        <h4>Realiza un Post</h4>
+                        <var ></var>
+                        <h4>Alta de Clínica</h4>
                         <div class="registro-bienvenida-texto">
                             Comparte un video interesante para la comunidad
                         </div>
@@ -186,17 +194,38 @@
                     </div>
                     <div class="col s12 m6 registro-formulario">
                         <div class="input-field">
-                            <input id="tituloNewPost" type="text" maxlength="30" data-length="30" required />
-                            <label for="tituloNewPost">Titulo:</label>
+                            <input id="nameAltaClinica" type="text" maxlength="30" data-length="30" required />
+                            <label for="nameAltaClinica">Nombre Clínica:</label>
                         </div>
                         <div class="input-field">
-                            <textarea id="descripcionNewPost" type="text"  maxlength="200" data-length="200" class="materialize-textarea" required></textarea>
-                            <label for="descripcionNewPost">Descripción:</label>
+                            <input id="razonAltaClinica" type="text"  maxlength="30" data-length="30" required />
+                            <label for="razonAltaClinica">Razón social:</label>
                         </div>
                         <div class="input-field">
-                            <input id="linkVideoNewPost" type="text" required />
-                            <label for="linkVideoNewPost">Enlace del video:</label>
+                            <input id="cifAltaClinica" type="text" required />
+                            <label for="cifAltaClinica">CIF:</label>
                         </div>
+                        <div class="input-field">
+                            <input id="phoneAltaClinica" type="text" required />
+                            <label for="phoneAltaClinica">Teléfono:</label>
+                        </div>
+                        <div class="input-field">
+                            <input id="mailAltaClinica" type="text" required />
+                            <label for="mailAltaClinica">Email:</label>
+                        </div>
+                        <div class="input-field">
+                            <input id="addressAltaClinica" type="text" required />
+                            <label for="addressAltaClinica">Dirección de la clínica:</label>
+                        </div>
+                        <div class="input-field">
+                            <input id="managerAltaClinica" type="text" required />
+                            <label for="managerAltaClinica">Nombre del Gerente:</label>
+                        </div>
+                        <div class="input-field">
+                            <input id="idAltaClinica" type="text" required />
+                            <label for="idAltaClinica">Id:</label>
+                        </div>
+                        <!--
                         <div class="progress-panel">
                             <label for="btnUploadFile">Imagen:</label>
                             <input type="file" value="upload" id="btnUploadFile" />
@@ -204,8 +233,9 @@
                                 <div class="determinate" style="width: 0%"></div>
                             </div>
                         </div>
+                        -->
                         <div class="div-btnInicioSesion">
-                            <a id="btnRegistroPost" class="btn waves-effect waves-light">Crear Post<i class="material-icons left">create</i></a>
+                            <a id="btnCreateClinica" class="btn waves-effect waves-light">Dar de alta<i class="material-icons left">create</i></a>
                         </div>                      
                     </div>
                 </div>
@@ -213,22 +243,35 @@
         </div>
     </div>
 
+    <!-- Modal AltaClinica -->
+    <div id="modalNombreClinica" class="modal modal-registro">
+        <div class="modal-content">
+            <div class="container">
+                        <div class="input-field">
+                            <input id="nameSearchClinica" type="text" maxlength="30" data-length="30" required />
+                            <label for="nameSearchClinica">Nombre Clínica:</label>
+                        </div>
+                        <div class="div-btnInicioSesion">
+                            <a id="btnSearchClinica" class="btn waves-effect waves-light">Buscar<i class="material-icons left">create</i></a>
+                        </div>                      
+            </div>
+        </div>
+    </div>
+
 <!-- Insert these scripts at the bottom of the HTML, but before you use any Firebase services -->
 
   <!-- Firebase App (the core Firebase SDK) is always required and must be listed first -->
-  <script src="https://www.gstatic.com/firebasejs/6.2.0/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/7.20.0/firebase-app.js"></script>
 
   <!-- Add Firebase products that you want to use -->
-  <script src="https://www.gstatic.com/firebasejs/6.2.0/firebase-auth.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/6.2.0/firebase-firestore.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/6.2.0/firebase-storage.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/6.2.0/firebase-messaging.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/7.20.0/firebase-auth.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/7.20.0/firebase-firestore.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/7.20.0/firebase-storage.js"></script>
 
 
   
-
   <!-- Initialize Firebase -->
-  <script src="https://www.gstatic.com/firebasejs/init.js"></script>
+  <script src="https://www.gstatic.com/firebase/init.js"></script>
 
 </body>
 
@@ -247,6 +290,8 @@
 <script type="text/javascript" src="js/auth/autenticacion.js"></script>
 <script type="text/javascript" src="js/auth/authController.js"></script>
 <script type="text/javascript" src="js/post/postController.js"></script>
+<script type="text/javascript" src="js/clinicas/clinica.js"></script>
+<script type="text/javascript" src="js/clinicas/clinicaController.js"></script>
 
 
 <!-- endbuild -->
