All queries done

--- a/public/index.html
+++ b/public/index.html
@@ -565,9 +565,7 @@
                                                 <ul>
                                                     <li><a id="btnTodosPacientesConsultor">Ver todas</a></li>
                                                     <li><a id="btnIdPacientesConsultor">Por Identificación</a></li>
-                                                    <li><a id="btnActivosPacientesConsultor">Activos</a></li>
-                                                    <li><a id="btnInactivosPacientesConsultor">Inactivos</a></li>
-                                                    <li><a id="btnEsperaPacientesConsultor">En Espera</a></li>
+                                                    <li><a id="btnPacientesConsultorClinica">Por Clínica</a></li>
                                                 </ul>
                                             </li>
                                         </ul>
@@ -577,9 +575,10 @@
                                     <ul>
                                         <li><a id="btnTodosTicketsConsultor">Ver todos</a></li>
                                         <li><a id="btnConceptoTicketsConsultor">Por Concepto</a></li>
+                                        <li><a id="btnConsultorTicketsPaciente">Por Paciente</a></li>
+                                        <li><a id="btnConsultorTicketsClinica">Por Clínica</a></li>
                                     </ul>
                                 </li>
-                                <li><a id="btnPuntosConsultor">PUNTOS</a></li>
                                 <li><a id="btnSaldosConsultor">SALDOS</a></li>
                             </ul>
                         </nav>
